@@ -1,3 +1,6 @@
+* Add quantities relates on Template
+* Allow grouping per product columns to compute quantities
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Add flat children option on location
